# bible-presenter

./: .gitignore  ADR.md  README.md  TROUBLESHOOTING_WINDOWS_BUILD.md  VPS_BUILD_GUIDE.md  check_db.py  docker-compose.yml
.github/workflows/: build-windows.yml
backend/: .dockerignore  Dockerfile  main.py  requirements.txt
backend/bible_embeddings/2467224e-3b52-4c96-8543-3c46e90c2e8c/: index_metadata.pickle
desktop/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
desktop-rs/: .gitignore  AUTO_UPDATER.md  CLAUDE.md  MULTI_VERSION_BIBLE_SETUP.md  README_FIXES.md  SHORTCUTS.md  bugs.md  features.md  index.html  limitation.md  package-lock.json  package.json  review.md  todo.md  vite.config.ts
desktop-rs/scripts/: generate_embeddings.py  generate_embeddings_colab.ipynb
desktop-rs/src/: App.tsx  index.css  pptxParser.ts  store.ts
desktop-rs/src-tauri/: Cargo.toml  tauri.conf.json
desktop-rs/src-tauri/.cargo/: config.toml
desktop-rs/src-tauri/capabilities/: default.json
desktop-rs/src-tauri/icons/: icon.icns
desktop-rs/src-tauri/src/: lib.rs  main.rs
desktop-rs/src-tauri/src/audio/: mod.rs
desktop-rs/src-tauri/src/engine/: mod.rs
desktop-rs/src-tauri/src/remote/: camera.html  mod.rs  remote.html
desktop-rs/src-tauri/src/store/: media_schedule.rs  mod.rs
desktop-rs/src/components/: BackgroundEditor.tsx  BibleTab.tsx  LowerThirdTab.tsx  LtDesignerTab.tsx  MediaPickerModal.tsx  MediaTab.tsx  PresentationsTab.tsx  PreviewCard.tsx  PropsTab.tsx  QuickBiblePicker.tsx  (+7 more)
frontend/: package.json
frontend/app/: page.tsx
(+32 files in other folders)
