[package]
name = "bible-presenter-rs"
version = "0.1.0"
description = "A professional, real-time Bible projection tool for churches."
authors = ["Bible Presenter Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-dialog = "2.0.0"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
whisper-rs = "0.12.0" 
cpal = "0.15.3"      
rusqlite = { version = "0.31.0", features = ["bundled"] }
rubato = "0.14"      # High-quality resampling
tokenizers = "0.19"
ort = "2.0.0-rc.11"
ndarray = "0.15"     # Tensor manipulation
ndarray-npy = "0.8"  # Load .npy files
anyhow = "1.0"        
parking_lot = "0.12" 
regex = "1.10"       
num_cpus = "=1.16.0"    

[lib]
name = "bible_presenter_lib"
crate-type = ["rlib"]

[[bin]]
name = "bible-presenter"
path = "src/main.rs"
